Fix icons being blurry on high resolution displays
 - Set `imageSmoothingEnabled` to false on all canvas rendering
   contexts, which stops team avatars from being blurred (smoothed) when
   scaled up on high resolution devices. Since the canvas rendering
   contexts used to draw the avatars are created by the Google Maps API,
   this has to be achieved by overriding
   `CanvasRenderingContext2D.prototype.drawImage` and updating the
   `imageSmoothingEnabled` property there. See code and comments for
    more detailed information. Since most team avatars are meant to be
    pixel art, disabling image smoothing makes them look much better
    when scaled up on higher resolution devices.
 - Updated team.png (default avatar): recreated it at a higher
   resolution so it looks better when scaled up on higher resolution
   displays with `imageSmoothingEnabled` set to false.
 - Add image-rendering property to canvas element so that if any of the
   canvas elements used by the Google Maps API are scaled, it will scale
   them using an image scaling algorithm like nearest neighbor (thus
   preventing blur on marker images). This applies to the canvas itself
   being scaled, while `imageSmoothingEnabled` applies to images being
   scaled while being drawn on the canvas.
 - Add .vscode to .gitignore

Fixes issue #193

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,15 @@ tr td:last-child {
     width: 40%;
 }
 
+/* When a canvas is scaled, stop it from blurring */
+canvas {
+    image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: optimize-contrast;
+    image-rendering: crisp-edges;
+    image-rendering: pixelated;
+}
+
 /* Searchable select stuff */
 input {
     width: 75%;
